css/style.css
/*----------------
    DEBUG
------------------*/
.debug .container {
    border: 2px dashed blueviolet;
}

.debug .row .col {
    border: 2px dashed lightcoral;
    background-color: rgba(240, 128, 128, 0.2);
    min-height: 200px;
}

/*----------------
    RESET
------------------*/
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/*----------------
    COMMONS
------------------*/
.img-fluid {
    max-width: 100%;
    cursor: pointer;
}

/*----------------
    LAYOUT
------------------*/
.container {
    max-width: 1400px;
    margin-left: auto;
    margin-right: auto;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.gap-10 {
    gap: 10px;
}
.gap-20 {
    gap: 20px;
}
.gap-30 {
    gap: 30px;
}

.big{
    display: flex;
    height: calc(100% - 90px);
}

/*----------------
    TYPOGRAPHY
------------------*/
body {
    font-family: "Poppins", sans-serif;
    height: 100vh;
}

/*----------------
    BUTTONS
------------------*/
.btn {
    background-color: #808080;
    font-family: inherit;
    border: none;
    padding: 0px 6px;
    cursor: pointer;
}

.big-btn{
    background-color: transparent;
    border-radius: 30px;
    color: white;
    padding: 10px 30px;
    cursor: pointer;
    border: 1px solid white;
}

.big-btn:hover{
    transform: scale(1.1);
}

.btn-large {
    padding: 10px 20px;
    font-size: 16px;
}

.btn-primary {
    background-color: lightcoral;
    color: #fff;
}

/*----------------
    HEADER
------------------*/

header{
    width: 50px;
    flex-shrink: 0;
    background-color: black;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
}

.logo-small{
    padding: 10px 10px;
}

.logo-large{
    display: none;
    padding: 20px 0;
    padding-left: 9px;
    width: 150px;
}

.header-nav{
    padding-left: 2px;
}

.header-nav li span{
    display: none;
    color: #fff;
    padding-left: 8px;
    font-size: 13px;
    cursor: pointer;
}

.header-nav li{
    padding: 5px 10px;
    display: flex;
    align-items: center;
    list-style: none;
}

.header-nav li img{
    height: 26px;
    cursor: pointer;
}

.header-nav ul li:not(:first-child) span{
    color: #808080;
}

.header-nav ul li:not(:first-child) span:hover{
    color: #fff;
}

.playlist{
    flex-grow: 1;
    padding: 10px;
    color: #808080;
}

.playlist h3, .playlist button,
.playlist a, .playlist ul{
    display: none;
}

.playlist h3{
    color: white;
    padding: 10px 0;
}

.playlist button{
    font-size: 24px;
    margin-right: 8px;
}

.playlist a{
    text-decoration: none;
    color: #808080;
}

.playlist button:hover{
    background-color: #fff;
}

.playlist ul{
    padding-top: 14px;
    list-style: none;
}

.playlist li{
    padding: 8px 0;
    font-size: 13px;
}

.playlist li a{
    color: #808080;
    text-decoration: none;
}

.playlist a:hover{
    color: white;
}

.header-bottom{
    display: flex;
    flex-wrap: wrap;
    color: white;
    margin-bottom: 10px;
    justify-content: center;
}

.header-bottom div{
    display: flex;
    align-items: center;
}

.download img{
    height: 18px;
}

.user-profile img{
    height: 26px;
}

.download a{
    display: none;
    padding: 0px 10px;
    color: #808080;
    font-size: 13px;
    text-decoration: none;
}

.download a:hover{
    color: #fff;
}

.user-profile span{
    display: none;
    padding: 0px 10px;
}

.download{
    padding-bottom: 10px;
    padding-right: 5px;
}

.user-profile{
    padding-top: 10px;;
}

.user-profile img{
    padding: 2px;
    background-color: #808080;
    border-radius: 50%;
    height: 30px;
}

/*----------------
    MAIN
------------------*/

main{
    flex-grow: 1;
    background-color: #141922;
    overflow-y: auto;
}

.banner{
    background-color: #080b12;
    position: sticky;
    top: 0;
    right: 0;
    height: 82px;
    z-index: 9;
}

.banner button{
    position: absolute;
    top: 12px;
    right: 4px;
}

.main-navbar ul{
    display: flex;
    justify-content: center;
    padding-top: 20px;
    width: 100%;
    flex-wrap: wrap;
    list-style: none;
}

.main-navbar li a{
    text-decoration: none;
    color: #808080;
    font-size: 14px;
}

.main-navbar hr{
    color: #adff2f;
    background-color: #adff2f;
    margin-top: 4px;
    height: 4px;
    width: 20px;
    border-radius: 10px;
    margin-left: 30px;
}

.main-navbar li a:hover{
    color: white;
}

.album h3, .created h3, .popular h3{
    color: #fff;
    padding: 30px 0;
}

.album, .created, .popular{
    margin: 0px 16px;
}

.album .col{
    width: calc((100% /2) - 24px);
}

.art{
    position: relative;
}

.art img{
    display: block;
}

.play{
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.6);
    font-size: 50px;
    color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: 0;
}

.art:hover .play{
    opacity: 1;
}

.popular .art:hover .play{
    opacity: 1;
    border-radius: 100%;
}

.title-album h4{
    color: #fff;
    text-align: center;
    padding: 6px 0;
}

.title-album p{
    color: #808080;
    text-align: center;
    font-size: 12px;
    padding-bottom: 8px;
}

.created .col{
    width: calc((100% /2) - 24px);
}

.created h3, .popular h3{
    padding-bottom: 6px;
}

.created p, .popular p{
    color: #808080;
    padding-bottom: 20px;
    font-size: 13px;
}

.popular .col{
    width: calc((100% /2) - 24px);
}

.popular .art img{
    border-radius: 50%;
}

/*----------------
    FOOTER
------------------*/

footer{
    height: 90px;
    background-color: #282828;
}

footer > .row{
    align-items: center;
    padding: 8px 6px;
}

.song{
    width: 28%;
}

.song .row{
    align-items: center;
    justify-content: flex-start;
    flex-wrap: nowrap;
}

.song .col img{
    width: 36px;
    height: 36px;
}

.song .col h4{
    color: #fff;
    font-size: 16px;
    cursor: pointer;
}

.song .col p{
    color: #808080;
    font-size: 12px;
    cursor: pointer;
}

.song .col:nth-child(2){
    line-height: 13px;
}

.song .col div i{
    font-size: 16px;
    color: #808080;
    cursor: pointer;
}

.song .col i:hover,
.song .col p:hover{
    color: #fff;
}

.player{
    width: 44%;
}

.player .col{
    display: flex;
    justify-content: center;
    align-items: center;
}

.player .col i{
    color: #fff;
    font-size: 22px;
    padding: 0px 10px;
    cursor: pointer;
}

.player .col i:nth-child(3){
    font-size: 40px;
    padding: 0px 24px;
}

.player .col i:nth-child(3):hover{
    transform: scale(1.1);
}

.player .col p{
    color: #fff;
    padding: 8px 4px;
    font-size: 12px;
}

.song-bar{
    width: 160px;
    height: 6px;
    color: transparent;
    background-color: #808080;
    border-radius: 10px;
    cursor: pointer;
}

.rep-song-bar{
    width: 30px;
    height: 6px;
    color: white;
    background-color: #fff;
    border-radius: 10px;
    margin-top: -6px;
    cursor: pointer;
}

.circle{
    color: transparent;
    background-color: transparent;
    border-radius: 100%;
    width: 14px;
    height: 14px;
    margin-top: -10px;
    margin-left: 20px;
    margin-bottom: -3px;
}

.circle:hover{
    color: #fff;
    background-color: #fff;
    border-radius: 100%;
    width: 14px;
    height: 14px;
    margin-top: -10px;
    margin-left: 20px;
}

.rep-song-bar:hover{
    color: #adff2f;
    background-color: #adff2f;
}

.extra{
    width: 28%;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.extra i{
    color: white;
    padding: 0px 4px;
    cursor: pointer;
}

.volume-bar{
    width: 80px;
    height: 6px;
    color: transparent;
    background-color: #808080;
    border-radius: 10px;
    cursor: pointer;
}

/*----------------
    RESPONSIVE
------------------*/

/*Small Devices*/

@media screen and (min-width: 576px) {
    header {
        width: 240px;
        flex-shrink: 0;
    }

    .logo-small{
        display: none;
    }

    .logo-large{
        display: block;
    }

    .header-nav ul li:first-child{
        border-left: 3px solid #adff2f;
    }

    .header-nav ul li:not(:first-child){
        border-left: 3px solid black;
    }

    .header-nav li span{
        display: inline;
    }

    .playlist h3, .playlist button,
    .playlist a, .playlist ul{
        display: inline-block;
    }

    .header-bottom{
        padding: 0 10px;
    }

    .download a, .user-profile span{
        display: inline-block;
    }

    .download{
        width: 100%;
        border-bottom: 1px solid #808080
    }

    .user-profile{
        width: 100%;
    }

    .song .col p{
        display: inline;
    }

}

/*Medium Devices*/

@media screen and (min-width: 640px) {

    .album .col,
    .created .col,
    .popular .col{
        width: calc((100% /4) - 24px);
    }

    .song .col div{
        display: inline;
        padding: 0px 8px;
    }

    .song-bar{
        width: 240px;
    }

    .volume-bar{
        width: 80px;
    }
    
    .extra i{
        padding: 0px 4px;
    }

}

/*Large Devices*/

@media screen and (min-width: 876px) {

    .album .col,
    .created .col,
    .popular .col{
        width: calc((100% /6) - 24px);
    }
    
    .song-bar{
        width: 300px;
    }

    .volume-bar{
        width: 120px;
    }

    .extra i{
        padding: 0px 10px;
    }
    
}

